infra/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy
  template:
    metadata:
      labels:
        app: frontend-deploy
    spec:
      containers:
        - name: frontend-deploy
          image: beretedocker/frontend
          resources:
            requests:
              cpu: 500m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip
spec:
  selector:
    app: frontend-deploy
  ports:
    - name: frontend-port
      port: 3000
      targetPort: 3000
      protocol: TCP
