infra/k8s/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: blog.com
      http:
        paths:
          - path: /posts-with-comments
            pathType: Prefix
            backend:
              service:
                name: query-cluster-ip
                port:
                  name: query-port
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip
                port:
                  name: posts-port
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip
                port:
                  name: comments-port
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-cluster-ip
                port:
                  name: frontend-port
